2002-09-08  John Levon  <levon@movementarian.org>

	* QMathDialog.C:
	* iconpalette.h:
	* iconpalette.C: re lay out on size change
 
2002-09-08  John Levon  <levon@movementarian.org>

	* QMathDialog.h:
	* QMathDialog.C:
	* iconpalette.C: More fixes.
 
2002-09-08  John Levon  <levon@movementarian.org>

	* ui/QMathDialog.ui:
	* QMathDialog.h:
	* QMathDialog.C: add decos as symbols. Some fixes.
 
2002-09-07  John Levon  <levon@movementarian.org>

	* qfont_metrics.C: unrevert per-char metrics. Droppings
	  are better than entirely wrong metrics. Hopefully
	  Andre can fix it ...
 
2002-09-07  John Levon  <levon@movementarian.org>

	* qfont_loader.C: fix sizes for symbols etc.
 
2002-09-07  John Levon  <levon@movementarian.org>

	* qfont_metrics.C: revert accurate per-char metrics
	  because LyX is broken
 
2002-09-07  John Levon  <levon@movementarian.org>

	* qfont_loader.h:
	* qfont_loader.C: add debug
 
2002-09-06  John Levon  <levon@movementarian.org>

	* QMath.h:
	* QMath.C: add sub/superscript

	* ui/QMathDialog.ui:
	* QMathDialog.h:
	* QMathDialog.C: add dots. Use a completely broken :(
	  scrollview. 

	* iconpalette.C: increase size 
 
2002-09-04  Angus Leeming  <leeming@lyx.org>

	* QLyXKeySym.C: using std::endl directive.

2002-08-30  John Levon  <levon@movementarian.org>

	* Makefile.dialogs:
	* moc/Makefile.am:
	* QMath.h:
	* QMath.C:
	* QMathDialog.h:
	* QMathDialog.C:
	* ui/QMathDialog.ui: start math panel

	* iconpalette.h:
	* iconpalette.C: new widget used by above
 
2002-08-29  John Levon  <levon@movementarian.org>

	* Toolbar_pimpl.C: defocus layout combo on select
 
2002-08-29  John Levon  <levon@movementarian.org>

	* QtView.C: add back in allow/prohibitInput (for now)

	* TODO: update
 
2002-08-29  John Levon  <levon@movementarian.org>

	* Toolbar_pimpl.C: mathed math-insert - skip
	  the preceding '\' when looking for file name
 
2002-08-29  John Levon  <levon@movementarian.org>

	* Toolbar_pimpl.C: math xpm handling in preparation