@@ -1,5 +1,10 @@
 2002-09-08  John Levon  <levon@movementarian.org>
 
+	* QMathDialog.h:
+	* QMathDialog.C: detachable icon menus
+ 
+2002-09-08  John Levon  <levon@movementarian.org>
+
 	* QMathDialog.C:
 	* iconpalette.h:
 	* iconpalette.C: re lay out on size change
